@@ -189,6 +189,7 @@ void idServerClientSystemLocal::GetChallenge(netadr_t from) {
         if(developer->integer) {
             common->Printf("Couldn't resolve auth server address\n");
         }
+#if 0
     } else if(svs.time - oldestClientTime > AUTHORIZE_TIMEOUT) {
         if(developer->integer) {
             common->Printf("Authorize server timed out\n");
@@ -200,6 +201,7 @@ void idServerClientSystemLocal::GetChallenge(netadr_t from) {
 
         challenge->authServerStrict = true;
         return;
+#endif
     } else {
         if(developer->integer) {
             common->Printf("Sending getIpAuthorize for %s\n",
@@ -283,6 +285,7 @@ void idServerClientSystemLocal::AuthorizeIpPacket(netadr_t from) {
         return;
     }
 
+#if 0
     if(response == 1) {
         if(!reason) {
             networkChainSystem->OutOfBandPrint(NS_SERVER, challengeptr->adr,
@@ -305,6 +308,7 @@ void idServerClientSystemLocal::AuthorizeIpPacket(netadr_t from) {
                                                "authStatus %i %i %s", challengeptr->getChallengeCookie, response, reason);
         }
     }
+#endif
 
     ::memset(challengeptr, 0, sizeof(*challengeptr));
 }
