@@ -1,4 +1,5 @@
 2021-08-27 Dusan Jocic <dusanjocic@msn.com>
+	* [Authentication Server] Turned off "authStatus" until we get new PHP based website
 	* [Console] Turn off chatlog
 
 2021-08-26 Dusan Jocic <dusanjocic@msn.com>
